fix: solve broken style on RoleFilter component

--- a/src/components/RoleFilter/roleFilter.module.css
+++ b/src/components/RoleFilter/roleFilter.module.css
@@ -16,7 +16,8 @@
   flex-wrap: nowrap;
   align-items: center;
   display: flex;
-  height: 40px;
+  width: 100%;
+  height: 50px;
 }
 
 .filterWrapper > button {
@@ -41,9 +42,7 @@
     flex-direction: row;
     align-items: center;
   }
-  /* 
   .filterWrapper {
-    width: 90%;
-    align-items: center;
-  } */
+    width: auto;
+  }
 }
